--- a/frontend/src/pages/base/HomePage.css
+++ b/frontend/src/pages/base/HomePage.css
@@ -66,12 +66,12 @@
   display: flex;
   flex-direction: column;
 }
-.login-button {
+.home-login-button {
   margin-top: 200px;
   width: 250px;
   height: 40px;
 }
-.signup-button {
+.home-signup-button {
   margin-top: 7px;
   width: 250px;
   height: 40px;
