--- a/frontend/src/components/recommend/KeywordRecommend.css
+++ b/frontend/src/components/recommend/KeywordRecommend.css
@@ -2,3 +2,34 @@
     height: 50px;
     width: 50px;
   }
+
+  .keyword-root{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 300px;
+    width: 100;
+  }
+  
+  .keyword-gridlist{
+    justify-content: center;
+    width: 800px;
+    height: 800px;
+  }
+  
+  .keyword-gridlist-item{
+    display: flex;
+    align-items: center;
+    justify-content: center;}
+  
+  .keyword-icon{
+    color:rgba(255, 255, 255, 0.54);
+  }
+  
+  .keyword-imgsize{
+    width: 300px;
+    height: 300px;
+  }
