--- a/frontend/src/pages/question/QuestionListPage.css
+++ b/frontend/src/pages/question/QuestionListPage.css
@@ -1,9 +1,10 @@
 .exam-create-btn {
-  border: 2px solid purple;
+  border: 3px solid rgb(238, 37, 161);
   border-radius: 4px;
   outline: none;
   color: black;
   background-color: transparent;
+  padding: 1.5px 2px;
 }
 .exam-update-btn {
   border: 2px solid rgb(238, 37, 161);
