--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -5,16 +5,17 @@
   padding-right: 30px;
 }
 .stepper-btn {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
 }
 
 .stepper-box {
-  /* border: 2px solid blue; */
+  /* border: 2px solid green; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 80px;
 }
 
 .set-quest-box {
