--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -21,3 +21,10 @@
 .set-quest-box {
   margin-top: 30px;
 }
+
+.radio-box {
+  /* border: 2px solid green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
