design create page

--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 80px;
+  margin-bottom: 100px;
 }
 
 .set-quest-box {
@@ -23,6 +23,10 @@
 }
 
 .quest-box {
+  display: flex;
+  justify-content: space-around;
+  /* border: 2px solid red; */
+  width: 90%;
 }
 
 .radio-box {
@@ -30,8 +34,44 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 15px;
+  border: 2px solid green;
 }
 
 .quest-create-input {
   width: 100%;
+}
+
+.stepper-final-box {
+  display: flex;
+  justify-content: center;
+}
+
+.stepper-final-box-comp {
+  border: 2px solid black;
+  margin-bottom: 100px;
+  width: 85%;
+}
+
+.create-final-label {
+  /* border: 2px solid red; */
+  color: rgb(95, 91, 91);
+}
+
+.create-final-quest {
+  /* border: 2px solid blue; */
+  width: 85%;
+}
+
+.create-final-ans {
+  /* border: 2px solid orange; */
+  margin-left: 5px;
+}
+
+.create-final-ans-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 15px;
+  /* border: 2px solid purple; */
+  width: 88%;
 }
