--- a/frontend/src/pages/question/QuestionDetailPage.css
+++ b/frontend/src/pages/question/QuestionDetailPage.css
@@ -1,3 +1,9 @@
 .new-quest-box {
   border: 2px solid blue;
 }
+.quest-detail-box {
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
