--- a/frontend/src/pages/base/HomePage.css
+++ b/frontend/src/pages/base/HomePage.css
@@ -7,7 +7,9 @@
   background: #111042;
   min-height: 640px;
 }
-
+.home-logo{
+  
+}
 /* Home Logo */
 @font-face {
   font-family: neon;
@@ -64,15 +66,19 @@
 /* Buttons */
 .buttons {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 .home-login-button {
-  margin-top: 200px;
-  width: 250px;
+  margin-top: 100px;
+  margin-right: 25px;
+  width: 100px;
   height: 40px;
+  margin-bottom: 100px;
 }
 .home-signup-button {
-  margin-top: 7px;
-  width: 250px;
+  margin-top: 100px;
+  margin-left: 25px;
+  width: 100px;
   height: 40px;
+  margin-bottom: 100px;
 }
