--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -303,10 +303,10 @@
 }
 
 .bulb-one {
-  height: 50px;
+  height: 52px;
 }
 .bulb-two {
-  height: 35px;
+  height: 40px;
 }
 
 @keyframes bulb-swing {
@@ -419,4 +419,17 @@
   width: 40px;
   height: 50px;
   /* border: 2px solid green; */
+}
+
+.light-box {
+  /* border: 2px solid green; */
+  width: 55px;
+}
+.hide-menu {
+  /* visibility: hidden; */
+}
+
+.light-box:hover + .hide-menu {
+  /* border: 3px solid orange; */
+  visibility: visible !important;
 }
