--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -339,25 +339,26 @@
 }
 
 .bulb-glow {
+  /* border: 1px solid red; */
   background: yellow;
   background: radial-gradient(
     ellipse at center,
     rgba(255, 255, 0, 0.5) 0%,
-    rgba(255, 255, 0, 0) 60%
+    rgba(255, 255, 0, 0) 100%
   );
-  width: 100px;
-  height: 100px;
-  bottom: -60px;
-  left: 50%;
-  margin-left: -50px;
+  width: 65px;
+  height: 40px;
+  bottom: -27px;
+  /* left: 50%; */
+  margin-left: -31px;
   position: absolute;
   border-radius: 100%;
   z-index: -1;
-  opacity: 0.25;
+  opacity: 0.4;
   animation: bulb-light 2s ease-in-out 2s infinite alternate;
 }
 
-.bulb-glow:hover {
+/* .bulb-glow:hover {
   background: green;
   background: radial-gradient(
     ellipse at center,
@@ -393,7 +394,7 @@
   z-index: -1;
   opacity: 0.25;
   animation: bulb-light 2s ease-in-out 2s infinite alternate;
-}
+} */
 
 @keyframes bulb-light {
   from {
@@ -423,7 +424,7 @@
 
 .light-box {
   /* border: 2px solid green; */
-  width: 55px;
+  /* width: 70px; */
 }
 .hide-menu {
   /* visibility: hidden; */
@@ -432,4 +433,9 @@
 .light-box:hover + .hide-menu {
   /* border: 3px solid orange; */
   visibility: visible !important;
+}
+
+.header-link {
+  color: black;
+  text-decoration: none;
 }
