--- a/frontend/src/pages/accounts/LoginPage.css
+++ b/frontend/src/pages/accounts/LoginPage.css
@@ -1,7 +1,3 @@
-.login-header {
-  margin-top: 160px;
-  text-align: center;
-}
 .login-form {
   margin: auto;
   width: 70%;
@@ -18,4 +14,8 @@
 .login-button {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+.login-image {
+  width: 350px;
+  margin-top: 10%;
 }
