--- a/frontend/src/pages/accounts/LoginPage.css
+++ b/frontend/src/pages/accounts/LoginPage.css
@@ -14,6 +14,10 @@
 .login-button {
   margin-top: 5px;
   margin-bottom: 5px;
+  height: 35px;
+  background-color: #F16B6F;
+  border: #F16B6F;
+  color: white;
 }
 .login-image {
   width: 350px;
