add question create image

--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -285,7 +285,7 @@
   justify-content: space-around;
   width: 80%;
   /* border: 2px solid blue; */
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .bulb-wire {
