--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -102,12 +102,14 @@
 }
 
 .create-box {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   padding: 0;
-  margin: 0;
+  padding: 10px 10px 10px 0;
   display: flex;
   flex-direction: column;
-  /* height: 200px; */
+  width: 650px;
+  height: 330px;
+  overflow: scroll;
 }
 .board-img {
   transform: rotate(270deg);
@@ -143,12 +145,6 @@
   max-height: 100%;
 }
 
-.test-boxxx {
-  border: 2px solid red;
-  width: 100%;
-  height: 100px;
-}
-
 .test-box {
   height: 500px;
   width: 65%;
@@ -157,7 +153,7 @@
   background-size: 950px 500px;
   background-repeat: no-repeat;
   margin: 30px 0 10px 0;
-  padding: 80px 200px 30px 200px;
+  padding: 60px 150px 30px 200px;
   display: flex;
   flex-direction: column;
 }
