--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -1,8 +1,9 @@
 .cancel-btn {
-  /* margin-top: 20px; */
+  margin-top: 20px;
   display: flex;
   justify-content: flex-end;
-  padding-right: 30px;
+  /* padding-right: 10px; */
+  /* border: 2px solid red; */
 }
 .stepper-btn {
   margin-top: 20px;
@@ -28,16 +29,13 @@
   display: flex;
   justify-content: space-around;
   /* border: 2px solid red; */
-  width: 90%;
+  width: 60%;
 }
 
 .radio-box {
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin-bottom: 15px;
   /* border: 2px solid green; */
-  width: 90%;
 }
 
 .quest-create-input {
@@ -104,10 +102,10 @@
 .create-box {
   /* border: 2px solid blue; */
   padding: 0;
-  padding: 10px 10px 10px 0;
+  padding: 10px 10px 0 0;
   display: flex;
   flex-direction: column;
-  width: 650px;
+  width: 100%;
   height: 330px;
   overflow: scroll;
 }
@@ -140,11 +138,6 @@
   overflow: scroll;
 } */
 
-.test-img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
 .test-box {
   height: 500px;
   width: 65%;
@@ -153,7 +146,7 @@
   background-size: 950px 500px;
   background-repeat: no-repeat;
   margin: 30px 0 10px 0;
-  padding: 60px 150px 30px 200px;
+  padding: 75px 150px 0px 200px;
   display: flex;
   flex-direction: column;
 }
