--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -101,13 +101,12 @@
 
 .create-box {
   /* border: 2px solid blue; */
-  padding: 0;
-  padding: 10px 10px 0 0;
+  padding: 10px 20px 0 0;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 330px;
-  overflow: scroll;
+  overflow: auto;
 }
 .board-img {
   transform: rotate(270deg);
