--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -417,7 +417,7 @@
 }
 
 .center-logo {
-  width: 40px;
+  width: 150px;
   height: 50px;
   /* border: 2px solid green; */
 }
@@ -441,6 +441,55 @@
 }
 
 .header-top {
-  height: 20px;
-  border: 1px solid blue;
+  height: 50px;
+  background-color: #a79c8e;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
+
+.header-logo {
+  margin-top: 20px;
+  --neon-text-color: #e77e4d;
+  --neon-border-color: #e77e4d;
+  font-size: 20px;
+  color: #fff;
+  padding: 20px 20px 20px 20px;
+  border: 0.2rem solid #fff;
+  border-radius: 5%;
+  text-transform: uppercase;
+  animation: flicker 1s infinite alternate;     
+}
+
+.header-logo::-moz-selection {
+  background-color: var(--neon-border-color);
+  color: var(--neon-text-color);
+}
+
+.header-logo::selection {
+  background-color: var(--neon-border-color);
+  color: var(--neon-text-color);
+}
+
+.header-logo:focus {
+  outline: none;
+}
+
+/* Animate neon flicker */
+@keyframes flicker {
+    
+    0%, 100% {
+      
+        text-shadow:
+            0 0 2rem var(--neon-text-color),
+            0 0 2rem var(--neon-text-color),
+            0 0 2rem var(--neon-text-color),
+            0 0 2rem var(--neon-text-color),
+            0 0 2rem var(--neon-text-color);
+        
+        box-shadow:
+            0 0 1rem var(--neon-border-color),
+            inset 0 0 .1rem var(--neon-border-color),
+            0 0 1rem var(--neon-border-color),
+            inset 0 0 2rem var(--neon-border-color);        
+    }
 }
