--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -441,55 +441,17 @@
 }
 
 .header-top {
-  height: 50px;
-  background-color: #a79c8e;
+  height: 30px;
+  background-color: #F0E5DE;
 }
-
-@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
 
 .header-logo {
-  margin-top: 20px;
-  --neon-text-color: #e77e4d;
-  --neon-border-color: #e77e4d;
-  font-size: 20px;
-  color: #fff;
-  padding: 20px 20px 20px 20px;
-  border: 0.2rem solid #fff;
-  border-radius: 5%;
-  text-transform: uppercase;
-  animation: flicker 1s infinite alternate;     
+  margin-top: 10px;
+  width: 170px;
 }
 
-.header-logo::-moz-selection {
-  background-color: var(--neon-border-color);
-  color: var(--neon-text-color);
-}
-
-.header-logo::selection {
-  background-color: var(--neon-border-color);
-  color: var(--neon-text-color);
-}
-
-.header-logo:focus {
-  outline: none;
-}
-
-/* Animate neon flicker */
-@keyframes flicker {
-    
-    0%, 100% {
-      
-        text-shadow:
-            0 0 2rem var(--neon-text-color),
-            0 0 2rem var(--neon-text-color),
-            0 0 2rem var(--neon-text-color),
-            0 0 2rem var(--neon-text-color),
-            0 0 2rem var(--neon-text-color);
-        
-        box-shadow:
-            0 0 1rem var(--neon-border-color),
-            inset 0 0 .1rem var(--neon-border-color),
-            0 0 1rem var(--neon-border-color),
-            inset 0 0 2rem var(--neon-border-color);        
-    }
+.header-top-upper {
+  height: 5px;
+  background-color: #7C7877;
+  opacity: 0.8;
 }
