--- a/frontend/src/components/base/FooterComp.css
+++ b/frontend/src/components/base/FooterComp.css
@@ -16,11 +16,18 @@
   width: 50px;
   position: absolute;
   left: 9%;
-  bottom: 18%;
+  bottom: 19%;
 }
 
 .footer-flower2 {
-  padding-top: 45px;
+  padding-top: 55px;
   width: 50px;
   margin-left: 10px;
+}
+
+.footer-lamp {
+  width: 100px;
+  position: absolute;
+  left: 3%;
+  bottom: 19%;
 }
