Update home color

--- a/frontend/src/pages/base/HomePage.css
+++ b/frontend/src/pages/base/HomePage.css
@@ -154,6 +154,18 @@
   background-color: #E6E3D4;
   display: flex;
 }
+.home-section2 {
+  background-color: #E6E3D4;
+  display: flex;
+}
+.home-section3 {
+  background-color: #E6E3D4;
+  display: flex;
+}
+.home-section4 {
+  background-color: #E6E3D4;
+  display: flex;
+}
 .home-section1-image {
   width: 22%;
   margin-left: 37%;
