Update fullpage home images

--- a/frontend/src/pages/base/HomePage.css
+++ b/frontend/src/pages/base/HomePage.css
@@ -171,6 +171,18 @@
   margin-left: 37%;
   margin-bottom: 20px;
 }
+.home-section2-image {
+  width: 20%;
+  margin-left: 15%;
+}
+.home-section3-image {
+  width: 20%;
+  margin-left: 15%;
+}
+.home-section4-image {
+  width: 20%;
+  margin-left: 15%;
+}
 .home-link {
   margin-left: 47%;
   font-size: 25px;
