--- a/frontend/src/pages/base/HomePage.css
+++ b/frontend/src/pages/base/HomePage.css
@@ -1,10 +1,8 @@
-.home-template {
-  padding-top: 35%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #111042;
-  min-height: 640px;
+@font-face {
+  font-family: 'BMEULJIRO';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 .home-section1 {
   background-color: #E6E3D4;
