--- a/frontend/src/pages/accounts/LoginPage.css
+++ b/frontend/src/pages/accounts/LoginPage.css
@@ -1,8 +1,8 @@
 .login-form {
   margin: auto;
-  width: 70%;
   display: flex;
   flex-direction: column;
+  width: 270px;
 }
 .login-footer {
   display: flex;
@@ -15,11 +15,17 @@
   margin-top: 5px;
   margin-bottom: 5px;
   height: 35px;
-  background-color: #F16B6F;
-  border: #F16B6F;
+  background-color: #77332c;
+  border: #77332c;
   color: white;
 }
 .login-image {
   width: 350px;
-  margin-top: 10%;
+  margin-top: 8.5%;
+}
+:root {
+  background-color: #f1efe7;
+}
+.login-template {
+  background-color: #f1efe7;
 }
