--- a/frontend/src/pages/accounts/SignupPage.css
+++ b/frontend/src/pages/accounts/SignupPage.css
@@ -6,9 +6,8 @@
   font-weight: bold;
 }
 .signup-form {
-  opacity: 0.9;
+  background-color: white;
   padding-top: 80px;
-  background-image: url('../../assets//temp/temp1.jpg');
   background-size: 500px 600px;
   display: flex;
   flex-direction: column;
@@ -49,4 +48,25 @@
 }
 .record-img {
   width: 30px;
+}
+.signup-template {
+  background-color: #D9D4CF;
+}
+.signup-box {
+  margin: auto;
+  width: 1100px;
+  margin-top: 10px;
+  padding: 70px;
+  background-color: white;
+}
+.signup-name {
+  margin-bottom: 40px;
+  color: #5E1E17;
+}
+.signup-page1 {
+  width: 500px;
+  margin-right: 140px;
+}
+.signup-page2 {
+  width: 500px;
 }
