--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -95,9 +95,7 @@
 .mainFont {
   font-family: 'BMEULJIRO';
 }
-:root {
-  background-color: #D9D4CF;
-}
 .app-template {
   border: solid black 2px;
+  margin-top: 10px;
 }
