--- a/frontend/src/components/recommend/KeywordRecommend.css
+++ b/frontend/src/components/recommend/KeywordRecommend.css
@@ -21,7 +21,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width:100% !important;}
+    width:100% !important;
+    filter: blur(6px); 
+
+    -webkit-filter: blur(6px); 
+  
+    -moz-filter: blur(6px);
+  
+    -o-filter: blur(6px);
+}
 
 .keyword-icon{
     color:rgba(255, 255, 255, 0.54);
