--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -139,13 +139,13 @@
 
 .test-box {
   height: 500px;
-  width: 83%;
+  width: 81.8%;
   /* border: 2px solid purple; */
   background-image: url('../../assets//question/board8.png');
   background-size: 900px 500px;
   background-repeat: no-repeat;
-  margin: 0px 0 10px 0;
-  padding: 75px 150px 0px 200px;
+  margin: 20px 0 10px 50px;
+  padding: 75px 0px 0px 0px;
   display: flex;
   flex-direction: column;
 }
