--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -15,6 +15,7 @@
 
 .stepper-box {
   /* border: 2px solid green; */
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
