--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -1,5 +1,5 @@
 .cancel-btn {
-  margin-top: 20px;
+  margin: 20px 50px 0 0;
   display: flex;
   justify-content: flex-end;
   /* padding-right: 10px; */
