--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -354,8 +354,8 @@
   animation: bulb-light 2s ease-in-out 2s infinite alternate;
 }
 
-/* .bulb-glow:hover {
-  background: green;
+.bulb-glow:hover {
+  /* background: green; */
   background: radial-gradient(
     ellipse at center,
     rgba(221, 80, 70, 0.5) 0%,
@@ -374,7 +374,7 @@
 }
 
 .bulb-light:hover + .bulb-glow {
-  background: green;
+  /* background: green; */
   background: radial-gradient(
     ellipse at center,
     rgba(221, 80, 70, 0.5) 0%,
@@ -390,7 +390,7 @@
   z-index: -1;
   opacity: 0.25;
   animation: bulb-light 2s ease-in-out 2s infinite alternate;
-} */
+}
 
 @keyframes bulb-light {
   from {
@@ -432,7 +432,7 @@
 }
 
 .header-link {
-  color: #5E1E17;
+  color: #5e1e17;
   text-decoration: none;
 }
 
@@ -440,12 +440,12 @@
   margin-top: 10px;
   height: 70px;
   border: solid black 2px;
-  background-color: #FADAD8;
+  background-color: #fadad8;
 }
 .header-top-under {
   margin-top: 7px;
   border: solid black 2px;
-  background-color: #FADAD8;
+  background-color: #fadad8;
 }
 
 .header-logo {
