--- a/frontend/src/pages/question/QuestionListPage.css
+++ b/frontend/src/pages/question/QuestionListPage.css
@@ -12,7 +12,7 @@
   color: white;
 }
 .exam-update-btn {
-  border: 2px solid rgb(255, 99, 173);
+  border: 2px solid #84304a;
   border-radius: 4px;
   outline: none;
   color: black;
