--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -61,7 +61,7 @@
   align-items: center;
   /* border: 2px solid blue; */
   margin-bottom: 100px;
-  width: 85%;
+  width: 60%;
 }
 
 .create-final-label {
@@ -84,17 +84,19 @@
   justify-content: flex-start;
   align-items: center;
   margin-bottom: 15px;
-  width: 15%;
+  width: 30%;
 }
 
 .stepper-exam-preview {
   width: 100%;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  border: 2px solid #0d0a0a;
+  border: 2px solid #5e1e27;
   padding-top: 10px;
+  overflow: auto;
 }
 .stepper-custom-btn {
   color: #0d0a0a;
