--- a/frontend/src/pages/question/QuestionListPage.css
+++ b/frontend/src/pages/question/QuestionListPage.css
@@ -1,10 +1,10 @@
 .exam-create-btn {
-  border: 3px solid rgb(255, 99, 173);
+  border: 3px solid #5e1e27;
   border-radius: 4px;
   outline: none;
-  color: black;
+  color: white;
   font-weight: bold;
-  background-color: rgb(255, 99, 173);
+  background-color: #5e1e27;
   padding: 3px 5px;
 }
 .exam-create-btn:hover {
@@ -24,4 +24,16 @@
   outline: none;
   color: black;
   background-color: transparent;
+}
+.quest-list-box {
+  height: 500px;
+  width: 81.8%;
+  /* border: 2px solid purple; */
+  background-image: url('../../assets//question/board8.png');
+  background-size: 900px 500px;
+  background-repeat: no-repeat;
+  margin: 20px 0 10px 50px;
+  padding: 45px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
 }
