--- a/frontend/src/pages/question/QuestionDetailPage.css
+++ b/frontend/src/pages/question/QuestionDetailPage.css
@@ -1,8 +1,9 @@
 .new-quest-box {
-  border: 2px solid blue;
+  display: flex;
+  margin-right: 15px;
+  margin-top: 10px;
 }
 .quest-detail-box {
-  border: 2px solid green;
   display: flex;
   margin-top: 10px;
 }
@@ -37,11 +38,12 @@
   width: 800px;
   display: flex;
   justify-content: flex-end;
+  margin-top: 5px;
 }
 .detail-ans-box {
   display: flex;
-  justify-content: flex-end;
-  width: 30%;
+  justify-content: flex-start;
+  width: 13%;
   /* border: 2px solid orange; */
   margin-right: 10px;
 }
@@ -55,8 +57,9 @@
   /* border: 2px solid red; */
 }
 .detail-update-btn,
-.detail-delete-btn {
-  width: 55px;
+.detail-delete-btn,
+.quest-add-btn {
+  width: 53px;
   background-color: transparent;
   outline: none;
   border-radius: 4px;
@@ -67,4 +70,22 @@
 }
 .detail-update-btn {
   border: 2px solid #5e1e27;
+}
+.quest-add-btn {
+  width: 45px;
+  height: 30px;
+  align-self: center;
+  border: 2px solid #84304a;
+}
+
+.detail-exam-preview {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  border: 2px solid #5e1e27;
+  padding-top: 10px;
+  overflow: auto;
 }
