--- a/frontend/src/pages/question/QuestionCreatePage.css
+++ b/frontend/src/pages/question/QuestionCreatePage.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   margin-right: 17px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .stepper-box {
@@ -59,7 +59,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   margin-bottom: 100px;
   width: 60%;
 }
