--- a/frontend/src/components/base/FooterComp.css
+++ b/frontend/src/components/base/FooterComp.css
@@ -51,9 +51,11 @@
   margin-left: 10px;
   opacity: 0.7;
 }
-.logout-button{
+.logout-button {
   padding-left: 7px;
+  transition: 0.2s;
 }
 .logout-button:hover {
   cursor: pointer;
+  color: #e23128;
 }
