Update video call logic

--- a/frontend/src/pages/call/ParticipantList.module.scss
+++ b/frontend/src/pages/call/ParticipantList.module.scss
@@ -12,11 +12,11 @@
   @for $i from 1 through 100 {
     video:first-child:nth-last-child(#{$i}),
     video:first-child:nth-last-child(#{$i}) ~ video {
-      margin: 0;
+      margin: 17%;
       padding: 0;
       font-size: 0;
       content: "#{$i}";
-      width: calc(100% / #{ceil(sqrt($i))});
+      width: 75%;
       height: calc(100% / #{round(sqrt($i))});
     }
   }
