--- a/frontend/src/pages/call/Room.module.scss
+++ b/frontend/src/pages/call/Room.module.scss
@@ -1,9 +1,8 @@
 .webcam {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 30%;
+  left: 12%;
   height: 100px;
-  z-index: 1;
 }
 
 .sidebarActions {
