--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,7 +76,8 @@
 
 @font-face {
   font-family: 'BMEULJIRO';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff') format('woff');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff')
+    format('woff');
   font-weight: normal;
   font-style: normal;
 }
