--- a/frontend/src/pages/post/PostCreatePage.css
+++ b/frontend/src/pages/post/PostCreatePage.css
@@ -1,6 +1,6 @@
 .post-image {
-  /* width: 100px; */
-  /* height: 110px; */
+  width: 100px;
+  height: 110px;
 }
 .post-create-box {
   /* border: 2px solid red; */
