--- a/frontend/src/pages/post/PostCreatePage.css
+++ b/frontend/src/pages/post/PostCreatePage.css
@@ -5,7 +5,7 @@
 .post-create-box {
   /* border: 2px solid red; */
   width: 80%;
-  height: 515px;
+  height: 700px;
   padding: 10px 40px 75px 40px;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,5 @@
   border: 2px solid #5e1e27;
   color: white;
   background-color: #5e1e27;
+  margin-top: 20px;
 }
