--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -98,6 +98,7 @@
 }
 .app-template {
   border: solid black 2px;
+  background-color: #E6E3D4;
   margin-top: 10px;
 }
 .footer-footer {
@@ -105,3 +106,21 @@
   background-color: #a79c8e;
   opacity: 0.7;
 }
+
+/* 구름 */
+body {
+  background-image: url("http://www.pngmart.com/files/1/Clouds-PNG-Pic.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), url("http://pngimg.com/uploads/cloud/cloud_PNG7.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), linear-gradient(to bottom, #0984e3, #81ecec);
+  background-size: 100%, 40%, 50%, 20%, cover;
+  background-repeat: no-repeat;
+  background-position: -300px 10%, -200px 70%, 200px 40%, 400px 80%, 100%;
+  animation: animater 20s 4s ease-out infinite alternate;
+  min-height: 100vh;
+}
+
+@keyframes animater {
+  to {
+    background-position: 200px 10%, 500px 70%, 600px 40%, 800px 80%, 100%;
+    background-size: 100%, 40%, 50%, 20%, cover;
+  }
+}
+
