--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -98,7 +98,7 @@
 }
 .app-template {
   border: solid black 2px;
-  background-color: #E6E3D4;
+  background-color: #ffffff;
   margin-top: 10px;
 }
 .footer-footer {
@@ -109,8 +109,18 @@
 
 /* 구름 */
 body {
-  background-image: url("http://www.pngmart.com/files/1/Clouds-PNG-Pic.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), url("http://pngimg.com/uploads/cloud/cloud_PNG7.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), linear-gradient(to bottom, #0984e3, #81ecec);
+  background-image: url('http://www.pngmart.com/files/1/Clouds-PNG-Pic.png'),
+    url('https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png'),
+    url('http://pngimg.com/uploads/cloud/cloud_PNG7.png'),
+    url('https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png'),
+    linear-gradient(
+      to bottom,
+      rgba(20, 20, 20, 0.1) 1%,
+      rgba(20, 20, 20, 0.7) 2%,
+      rgba(20, 20, 20, 1)
+    );
   background-size: 100%, 40%, 50%, 20%, cover;
+  /* background-image: url('./assets/mainImg/배경1.jpg'); */
   background-repeat: no-repeat;
   background-position: -300px 10%, -200px 70%, 200px 40%, 400px 80%, 100%;
   animation: animater 20s 4s ease-out infinite alternate;
@@ -123,4 +133,3 @@ body {
     background-size: 100%, 40%, 50%, 20%, cover;
   }
 }
-
