--- a/frontend/src/pages/accounts/SignupPage.css
+++ b/frontend/src/pages/accounts/SignupPage.css
@@ -16,9 +16,10 @@
   margin: auto;
 }
 .signup-footer {
-  margin-top: 20px;
+  margin-top: 40px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  /* border: 2px solid red; */
 }
 .signup-font {
   font-family: 'Single Day', cursive;
@@ -28,9 +29,10 @@
 .signup-button {
   margin-bottom: 5px;
   height: 35px;
-  background-color: #77AAAD;
-  border: #77AAAD;
+  background-color: #77aaad;
+  border: #77aaad;
   color: white;
+  /* border: 2px solid red; */
 }
 .signup-record {
   width: 100px;
@@ -48,19 +50,21 @@
   width: 30px;
 }
 .signup-template {
-  background-color: #D9D4CF;
+  background-color: #d9d4cf;
   height: 720px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .signup-box {
-  margin: auto;
   width: 1100px;
-  margin-top: 30px;
   padding: 50px 100px 100px;
   background-color: white;
 }
 .signup-name {
   margin-bottom: 70px;
-  color: #5E1E17;
+  color: #5e1e17;
 }
 .signup-page1 {
   width: 500px;
@@ -71,4 +75,18 @@
 }
 .signup-img {
   width: 100px;
+}
+.MuiInputBase-root
+  .MuiInput-root
+  .MuiInput-underline
+  .MuiInputBase-formControl
+  .MuiInput-formControl {
+  margin: 0;
+}
+.MuiSelect-root
+  .MuiSelect-select
+  .MuiSelect-selectMenu
+  .MuiInputBase-input
+  .MuiInput-input {
+  padding: 0;
 }
