--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,7 +109,7 @@
 
 /* 구름 */
 body {
-  background-image: url("http://www.pngmart.com/files/1/Clouds-PNG-Pic.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), url("http://pngimg.com/uploads/cloud/cloud_PNG7.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), linear-gradient(to bottom, #0984e3, #81ecec);
+  background-image: url("http://www.pngmart.com/files/1/Clouds-PNG-Pic.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), url("http://pngimg.com/uploads/cloud/cloud_PNG7.png"), url("https://myphuket-holiday.com/wp-content/uploads/revslider/homepage/cloud.png"), linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   background-size: 100%, 40%, 50%, 20%, cover;
   background-repeat: no-repeat;
   background-position: -300px 10%, -200px 70%, 200px 40%, 400px 80%, 100%;
