--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -439,8 +439,11 @@
 .header-top {
   margin-top: 10px;
   height: 70px;
-  border: solid black 2px;
-  background-color: #f4f7f7;
+  /* border: solid black 2px; */
+  /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
+  /* background-color: #ffd5d5; */
+  background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
+ background-blend-mode: screen;
 }
 .header-top-under {
   margin-top: 7px;
@@ -457,5 +460,15 @@
   position: absolute;
   top: -1%;
   left: 46%;
-  width: 140px;
+  width: 155px;
+}
+.text-logo {
+  padding: 7px;
+  width: 200px;
+  /* color: #FFFFF3; */
+  /* border: solid black 3px; */
+  /* background-color: #566270; */
+  position: absolute;
+  top: 4.5%;
+  left: 45%;
 }
