--- a/frontend/src/components/base/HeaderComp.css
+++ b/frontend/src/components/base/HeaderComp.css
@@ -438,17 +438,18 @@
 
 .header-top {
   margin-top: 10px;
-  height: 70px;
+  height: 80px;
   /* border: solid black 2px; */
   /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
   /* background-color: #ffd5d5; */
   background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
- background-blend-mode: screen;
+  background-blend-mode: screen;
 }
 .header-top-under {
   margin-top: 7px;
   border: solid black 2px;
-  background-color: #FFFFF3;
+  background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255,255,255,0.50) 47%, rgba(0,0,0,0.50) 100%);
+  background-blend-mode: screen;
 }
 
 .header-logo {
