--- a/frontend/src/components/base/FooterComp.css
+++ b/frontend/src/components/base/FooterComp.css
@@ -4,7 +4,7 @@
   width: 12.5%;
   position: absolute;
   bottom: 0;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .footer-right {
   height: 10px;
@@ -13,32 +13,32 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .footer-lamp {
   width: 100px;
   position: absolute;
   left: 1%;
   bottom: 10px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .footer-flower1 {
   width: 50px;
   position: absolute;
   left: 8%;
   bottom: 10px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .footer-pic1 {
   width: 50px;
   position: absolute;
   left: 7%;
   bottom: 90px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .footer-pic2 {
   width: 70px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .footer-logout {
   position: absolute;
@@ -49,7 +49,7 @@
   padding-top: 55px;
   width: 50px;
   margin-left: 10px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 .logout-button {
   padding-left: 7px;
