--- a/frontend/src/pages/call/Room.module.scss
+++ b/frontend/src/pages/call/Room.module.scss
@@ -1,8 +1,6 @@
 .webcam {
-  position: absolute;
-  top: 33%;
-  left: 17%;
-  height: 120px;
+width: 300px;
+height: 300px;
 }
 
 .sidebarActions {
@@ -13,6 +11,7 @@
 }
 
 .stickyBottom {
+  width: 250px;
   position: sticky !important;
   right: 0;
   left: 0;
@@ -20,6 +19,11 @@
 }
 
 .messageList {
-  height: 400px;
+  width: 250px;
+  height: 300px;
   overflow-y: auto;
+}
+
+.your-h3 {
+  width: 300px;
 }
